Fan-Controller as separate service! This new service starts directliy during application startup, so the fan controller is active after the application initialization process. With the previous version this service was first launched after calling the Fan-Controller-Dialogue (but that was not the desired behavior).

--- a/YAHW/Properties/Resources.de-DE.resx
+++ b/YAHW/Properties/Resources.de-DE.resx
@@ -389,7 +389,7 @@ DIE SOFTWARE WIRD OHNE JEDE AUSDRÜCKLICHE ODER IMPLIZIERTE GARANTIE BEREITGESTE
     <value>Fehler beim Festlegen der Lüftergeschwindigkeit</value>
   </data>
   <data name="MainboardFanControlNote" xml:space="preserve">
-    <value>[b]Hinweis:[/b] Innerhalb diese Dialoges können Einstellungen vorgenommen werden, die potentiell Ihren Rechner beschädigen können! Alle Einstellungen sollten mit entsprechender Vorsicht vorgenommen werden!</value>
+    <value>[b][color=Red]Hinweis:[/color][/b] Innerhalb diese Dialoges können Einstellungen vorgenommen werden, die potentiell Ihren Rechner beschädigen können! Alle Einstellungen sollten mit entsprechender Vorsicht vorgenommen werden!</value>
   </data>
   <data name="UserControlFanContolAdvancedMode" xml:space="preserve">
     <value>Erweiterter-Modus</value>
